	(CygbuildCmdShadowDelete): Write message only if verbose on.
	(CygbuildCmdShadowMain): Display relative paths.
	(CygbuildCommandMain): New command line option -C|--color and
	new variable OPTION_COLOR.
	(CygbuildBootVariablesGlobalMain): Define CYGBUILD_COLOR_*
	variables.
	(CygbuildEcho): New
	(CygbuildMsgFilter): New. Support colored messages.

2007-12-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (ReadmeFix): Correct tags like: YYYY-MM-DD,
	Firstname Lastname and YYYY.

	* bin/cygbuild.sh:
	- Adjust indentation of all messages to '-- '
	(CygbuildCmdInstallCheckBinFiles):
	Check 1st line Perl and Python interpreter correctness.
	(CygbuildInstallFixInterpreterPerl): New.
	(CygbuildInstallFixInterpreterPython): New
	(CygbuildInstallFixInterpreterMain): New
	(CygbuildInstallFixPerlPacklist): New
	(CygbuildInstallFixMain): Use
	`CygbuildInstallFixInterpreterMain' and
	`CygbuildInstallFixPerlPacklist'.
	(CygbuildCmdAllMain): New.
	(CygbuildCommandMain): New command 'almostall'.
	Changed command 'upstream-download' to 'download'
	(Help): Document 'almostall'.
	(CygbuildBootVariablesGlobalMain): New variable
	`cygbuild_opt_exclude_other'. Update variable
	`cygbuild_opt_exclude_auto_files'.
	(CygbuildWhichCheck); New.
	(CygbuildRunIfExist): New.
	(CygbuildPatchDiffstat): New.
	(CygbuildGPGsignFiles): Display relative filename
	(CygbuildGPGsignFiles): Adjust output messages.

2007-11-30  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install.tar.options.tmp: Remove Copyright
	template.

	* etc/template/upstream.perl-webget: Remove Copyright
	template.

	* etc/template/setup.hint: Adjust comments

	* bin/cygbuild.sh:
	(CygbuildBootVariablesGlobalMain):
	CYGBUILD_DIFF_OPTIONS: Ignore config.status.
	(CygbuildCommandMain): Add alias 'pchk' as 'patch-check'.
	(CygbuildCmdInstallCheckSetupHint):
	Fix 'setup.hint category should include...'. The
	awk variable 'line' was replaced with correct '$0'.
	(CygbuildConfPerlMain):